===============
# TNRS 0.3.3
===============

## NEW FEATURES

## Bug Fixes


===============
# TNRS 0.3.2
===============

## NEW FEATURES

## Bug Fixes
* Fixed problems with testing causing CRAN checks to fail


===============
# TNRS 0.3.1
===============

## NEW FEATURES

* Added progress bar when downloading multiple  batches of records
* Added an option to skip checks for internet when running functions
* TNRS "..._score" columns now returned as numeric (rather than character)

## Bug Fixes

* Removed a few non-ascii character in the example file which were causing errors in vcr
* Used new "skip_internet_check" option to fix bug with vcr when hitting the internet multiple times (once to check the connection, again to run the query)

## Misc.

* Ran styler to make the code a bit neater

===============
# TNRS 0.3.0
===============

## NEW FEATURES

* Revised code to make maintanence and testing easier
* Testing now makes use of the vcr package where possible
* Added the option to specify a threshold for match scores

## Bug Fixes

* Package should no longer produce errors in the event of API connection issues (e.g. server problems).


===============
# TNRS 0.2.0
===============

## NEW FEATURES

* Added Spanish language vignette
* Multiple sources now specified by character vector.
* Updated taxonomic sources and classifications.
* Added checks of inputs.

## Bug fixes

* Fixed error in naming metadata elements
* A server upgrade rendered RCurl incompatible with our api, so we switched to httr
* Modified functions to fail gracefully if the internet or API are unavailabile
* tests will now be skipped if offline

===============
# TNRS 0.1.0
===============

## NEW FEATURES

* released to CRAN